2014-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* configure.in:  More compact summary of terminal configuration.

	* term/pdf.trm:  Fix crash on point size = 0.

2014-03-04  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/fit.c (regress) src/fit.h:  Facilitate the inclusion of
	alternative minimization algorithms: Move code from regress()
	to new functions regress_init(), regress_finalize(),
	regress_check_stop(), and fit_progress(). Rename show_fit1() to
	show_fit_brief().

	* docs/gnuplot.doc (stats):  Document variables which hold the
	errors of linear regression analysis.

	* src/fit.c:  Dead code removal.

2014-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/fit.c src/matrix.c src/matrix.h:  Dead code removal.
	src/plot2d.c: Dead comment removal.

	* configure.in:  Build qt terminal by default if either qt5 or qt4
	libraries are detected.

	* docs/Makefile.am:  "make dist" should not trigger build of gnuplot.pdf
	if it is current (it gets confused by regenerated file pdffigures.tex).

2014-03-03  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/Makefile.am (DISTCLEANFILES): Clean off timestamp.h for
	distcheck.

	* demo/plugin/Makefile.am: New file.
	* demo/plugin/Makefile: Dropped.
	* configure.in: generate demo/plugin/Makefile in build directory.

2014-03-02  Jérôme Lodewyck  <lodewyck@users.sourceforge.net>

	* src/qtterminal/QtGnuplotWidget.* src/qtterminal/QtGnuplotWindow.*
	src/qtterminal/QtGnuplotSettings.ui: New settings option for displaying
	mouse coordinates. Possible choices are Status bar, Tool bar, Inline or
	None.

2014-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/Makefile.am.in:  Fix a typo, but the plugin subdir is still
	not being properly created by "make distcheck".

2014-02-28  Ethan A Merritt  <merritt@u.washington.edu>

	* src/misc.c src/axis.c src/parse.c src/parse.h src/internal.c
	src/color.c src/boundary.c src/command.c src/contour.c src/datafile.c: